# ticketzone-api

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .slugignore  Aptfile  Procfile  README.md  format.sh  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  dev.yml  prod.yml
core/: db.py  error_codes.py  exceptions.py  handlers.py  models.py  serializers.py  services.py  tests.py  utils.py  views.py
db/: exceptions.py  services.py
eticketing_api/: asgi.py  celery.py  fastapi_router.py  settings.py  urls.py  wsgi.py
events/: admin.py  constants.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
events/fixtures/: event_fixtures.py  events.json  ticket_types.json
events/migrations/: 0001_initial.py  0002_event_partner.py  0002_eventpromotion_use_limit_ticketpromotion_use_limit_and_more.py  0002_ticket_uses_tickettype_use_limit.py  0003_alter_event_name.py  0003_alter_eventpromotion_promotion_rate_and_more.py  0003_alter_ticket_hash.py  0004_alter_eventpromotion_promotion_rate_and_more.py  0004_event_created_at_event_updated_at_and_more.py  0004_event_event_number.py  0005_alter_event_created_at_and_more.py  0005_event_time.py  0006_eventcategory_alter_event_time_event_category.py  0006_ticket_ticket_number.py  0007_alter_event_time_ticket.py  0007_event_end_time_event_event_end_date_and_more.py  0008_alter_event_time.py  0008_event__assigned_ticketing_agents.py  0009_alter_event_time.py  0009_ticketscan.py  0010_alter_event_time_reminderoptin_promooptin.py  0010_ticketscan_redeem_triggered.py  0011_alter_event_time.py  0011_alter_eventpromotion_promotion_rate.py  0012_alter_event_is_public.py  0012_alter_event_time.py  0013_alter_event_time.py
notifications/: admin.py  constants.py  models.py  pusher.py  sms.py  tasks.py  tests.py  utils.py
notifications/fixtures/: notification_fixtures.py
notifications/migrations/: 0001_initial.py  0002_alter_massnotification_created_at_and_more.py
owners/: admin.py  models.py
owners/fixtures/: owner_fixtures.py
owners/migrations/: 0001_initial.py  0002_rename_phone_owner_phone_number.py
partner/: admin.py  constants.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
partner/fixtures/: banking_info.json  partner.json  partner_fixtures.py  person.json
partner/migrations/: 0001_initial.py  0002_partner_owner.py  0002_remove_person_person_type_partnerperson.py  0002_rename_start_on_partnerpromotion_starts_on.py  0003_alter_partner_owner_alter_partnerperson_person_and_more.py  0003_partner_created_at_partner_updated_at_and_more.py  0003_partnerpromotion_verified_and_more.py  0004_alter_partner_banking_info.py  0004_alter_partner_owner_alter_partnerperson_person.py  (+12 more)
partner_api/: __init__.py  admin.py  models.py  router.py  serializers.py  utils.py
payments/: admin.py  configs.py  constants.py  interfaces.py  models.py  serilaizers.py  services.py  tests.py  urls.py  views.py
scripts/: format.sh  launch-celery.sh  launch.sh  lint.sh  pre-commit.sh  quick_setup.sh  release.sh
tickets/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
(+47 files in other folders)
