[tool.poetry]
name = "eticketing_api"
version = "0.1.0"
description = "Eticketing API"
authors = ["mogendi <mogendi.mongare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
autoflake = "^1.4"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
