[tool.poetry]
name = "eticketing_api"
version = "0.1.0"
description = "Eticketing API"
authors = ["mogendi <mogendi.mongare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.3.2"
black = "22.3.0"
mypy = "^0.931"
isort = "^5.8.0"
autoflake = "^1.4"
Pillow = "^9.0.0"
django-stubs = "^1.9.0"
djangorestframework-stubs = "^1.4.0"
pydantic = "^1.9.0"
drf-yasg = {extras = ["validation"], version = "^1.20.0"}
flake8 = ">=3.7.9"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyYAML = "^6.0"
psycopg2-binary = "^2.9.3"
phonenumbers = "^8.12.44"
qrcode = "^7.3.1"
pdfkit = "^1.0.0"
numpy = "^1.22.3"
gunicorn = "^20.1.0"
standard = "^1.0.3"
dj-static = "^0.0.6"
dj-database-url = "^0.5.0"
celery = "^5.2.3"
django-celery-results = "^2.3.0"
pusher-push-notifications = "^2.0.1"
africastalking = "^1.2.4"
redis = "^4.1.4"
django-cors-headers = "^3.11.0"
boto3 = "^1.21.32"
django-storages = "^1.12.3"
types-requests = "^2.27.16"
pycryptodome = "^3.14.1"
pre-commit = "^2.18.1"
django-filter = "^21.1"
djangorestframework-csv = "^2.1.1"
dj-inmemorystorage = "^2.1.0"
python-pdf = "^0.39"
cryptography = "^39.0.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
fastapi-pagination = "^0.11.4"
jinja2 = "^3.1.2"

[tool.isort]
profile = "black"
[tool.black]
target-version = ['py37', 'py38', 'py39']
exclude = '''
(
    __pycache__
  | .pytest_cache
  | .gitignore
)
'''

[tool.poetry.dev-dependencies]
opencv-python = "^4.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"